# backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile.api-server  Dockerfile.observer  Dockerfile.txbot  Dockerfile.websocket-server  README.md
abi/: FeeManager.json  IDO.json  LpManager.json  ProjectToken.json  SwapFeeHook.json
crates/api-server/: Cargo.toml
crates/api-server/src/: cors.rs  main.rs  openapi.rs  state.rs
crates/api-server/src/middleware/: auth.rs  rate_limit.rs
crates/api-server/src/router/: mod.rs
crates/api-server/src/router/auth/: mod.rs
crates/api-server/src/router/builder/: mod.rs
crates/api-server/src/router/health/: mod.rs
crates/api-server/src/router/metadata/: mod.rs
crates/api-server/src/router/milestone/: mod.rs
crates/api-server/src/router/profile/: mod.rs
crates/api-server/src/router/project/: mod.rs
crates/api-server/src/router/token/: mod.rs
crates/api-server/src/router/trade/: mod.rs
crates/api-server/src/services/: auth.rs  builder.rs  metadata.rs  milestone.rs  mod.rs  profile.rs  project.rs  token.rs  trade.rs  upload.rs
crates/observer/: Cargo.toml
crates/observer/src/: config_local.rs  main.rs
crates/observer/src/controller/: lp.rs  mod.rs  project.rs
crates/observer/src/event/: core.rs  error.rs  handler.rs  mod.rs  provider.rs
crates/observer/src/event/ido/: receive.rs  stream.rs
crates/observer/src/event/lp/: mod.rs  receive.rs  stream.rs
crates/observer/src/event/price/: receive.rs  stream.rs
crates/observer/src/event/swap/: receive.rs  stream.rs
crates/observer/src/event/token/: receive.rs  stream.rs
crates/observer/src/sync/: receive.rs  stream.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  lib.rs
crates/shared/src/client/: api.rs  fallback.rs  health.rs  mod.rs  provider.rs
crates/shared/src/contracts/: ido.rs  lp_manager.rs  mod.rs  project_token.rs
crates/shared/src/db/postgres/: mod.rs  pool.rs
crates/shared/src/db/postgres/controller/: account.rs  balance.rs  block.rs  chart.rs  investment.rs  market.rs  milestone.rs  mod.rs  project.rs  refund.rs  swap.rs
crates/shared/src/db/redis/: cache.rs  mod.rs  rate_limit.rs  session.rs  whitelist.rs
crates/shared/src/metrics/: mod.rs
crates/shared/src/storage/: r2.rs
crates/shared/src/types/: account.rs  auth.rs  common.rs  event.rs  milestone.rs  mod.rs  profile.rs  project.rs  token.rs  trading.rs
crates/shared/src/utils/: address.rs  mod.rs  price.rs  single_flight.rs
crates/txbot/: Cargo.toml
crates/txbot/src/: config_local.rs  keystore.rs  main.rs
crates/txbot/src/job/: handler.rs  mod.rs
crates/txbot/src/job/collect/: execute.rs  mod.rs  stream.rs
crates/txbot/src/job/graduate/: execute.rs  mod.rs  stream.rs
crates/txbot/src/metrics/: mod.rs
crates/websocket-server/: Cargo.toml
crates/websocket-server/src/: config_local.rs  main.rs
crates/websocket-server/src/cache/: mod.rs
crates/websocket-server/src/candle/: mod.rs
crates/websocket-server/src/event/: chart.rs  core.rs  milestone.rs  mod.rs  new_content.rs  price.rs  project.rs  trade.rs
crates/websocket-server/src/server/: mod.rs
crates/websocket-server/src/server/socket/: connection.rs  mod.rs  rpc.rs
crates/websocket-server/src/stream/: mod.rs
crates/websocket-server/src/stream/dex/: receive.rs  stream.rs
crates/websocket-server/src/stream/ido/: mod.rs  receive.rs  stream.rs
crates/websocket-server/src/stream/pool/: receive.rs  stream.rs
docs/: api.md  websocket.md
docs/plans/: 2026-03-07-backend-architecture-design.md  2026-03-07-backend-implementation-plan.md  2026-03-08-metadata-upload-design.md  2026-03-08-metadata-upload-plan.md  2026-03-09-websocket-chart-improvement-design.md  2026-03-09-websocket-chart-improvement.md
docs/specs/: api-server.md  observer.md  shared.md  txbot.md  websocket-server.md
migrations/: 20260307000001_accounts.sql  20260307000002_sessions.sql  20260307000003_projects.sql  20260307000004_milestones.sql  20260307000005_investments.sql  20260307000006_refunds.sql  20260307000007_swaps.sql  20260307000008_balances.sql  20260307000009_charts.sql  20260307000010_market_data.sql  20260307000011_holders.sql  20260307000012_liquidity_positions.sql  20260307000013_fee_collections.sql  20260307000014_block_progress.sql  20260307000015_funding_snapshots.sql  20260307000016_pool_mappings.sql  20260307000017_drop_native_price.sql  20260307000018_drop_symbol_unique.sql  20260307000019_cascade_project_id.sql
tasks/: todo.md
