[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/api-server",
    "crates/websocket-server",
    "crates/observer",
    "crates/txbot",
]

[workspace.dependencies]
# Async
tokio = { version = "1.40", features = ["full"] }
futures-util = "0.3"

# Web
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "timeout", "limit"] }
tower-cookies = "0.10"

# Blockchain
alloy = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "bigdecimal", "chrono", "json", "uuid"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.4", features = ["serde"] }

# Caching
moka = { version = "0.12", features = ["future"] }
dashmap = "6.1"

# Error & Logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
uuid = { version = "1.11", features = ["v4"] }
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
lazy_static = "1.5"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.21"

# Shared crate
openlaunch-shared = { path = "crates/shared" }
