[package]
name = "openlaunch-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bigdecimal = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
alloy = { workspace = true }
moka = { workspace = true }
dashmap = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
http-body-util = "0.1"
