[package]
name = "openlaunch-websocket-server"
version = "0.1.0"
edition = "2024"

[dependencies]
openlaunch-shared = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bigdecimal = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
alloy = { workspace = true }
tower-http = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
